--- a/src/common/css/index.css
+++ b/src/common/css/index.css
@@ -66,9 +66,6 @@
     background-color: #e6f7ff;
     border-right-color: #1890ff;
 }
-.indexList {
-    border-left: 1px solid #ccc;
-}
 #indexXsMenu {
     display: flex;
 }
@@ -77,7 +74,15 @@
     flex: 1;
     float: none;
 }
-
+.indexList {
+    border-left: 1px solid #ccc;
+}
+.indexList {
+    padding: 0 10px;
+}
+.indexList p {
+    margin: 0;
+}
 /* @media all and (max-width: 767px) {
     #indexMenu {
         display: flex;
